--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
-
+    //  compile 'libs/ftp4j-1.7.2.jar'
     compile 'com.jakewharton:butterknife:7.0.1'
-
+    compile project(':commons-io-2.4')
+    compile project(':commons-net-3.3')
 }
