--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="baranek.vojtech.ftpclient" >
-
+    <uses-permission android:name="android.permission.INTERNET"
+        />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +11,9 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
+
+            <uses-permission android:name="android.permission.INTERNET"
+                />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
