--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
-    //  compile 'libs/ftp4j-1.7.2.jar'
+    compile 'com.android.support:recyclerview-v7:22.+'
+    compile 'com.android.support:cardview-v7:22.+'
+
     compile 'com.jakewharton:butterknife:7.0.1'
     compile project(':commons-io-2.4')
     compile project(':commons-net-3.3')
