--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="baranek.vojtech.ftpclient" >
     <uses-permission android:name="android.permission.INTERNET"
         />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,8 +13,7 @@
             android:name=".MainActivity"
             android:label="@string/app_name" >
 
-            <uses-permission android:name="android.permission.INTERNET"
-                />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
