--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
@@ -13,7 +14,12 @@ buildscript {
 }
 
 allprojects {
+
     repositories {
+
         jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
